[gd_scene load_steps=6 format=3 uid="uid://brfdyjmoujaaa"]

[ext_resource type="Script" path="res://scripts/ui/PauseScreen.gd" id="1_2yjm8"]
[ext_resource type="Texture2D" uid="uid://e83najplr50y" path="res://assets/ui/base_container.png" id="1_52a8q"]
[ext_resource type="FontFile" uid="uid://c7thntxb1otbu" path="res://misc/ThaleahFat.ttf" id="2_qkxwq"]
[ext_resource type="Texture2D" uid="uid://7dq5c36o50fg" path="res://assets/ui/base_button_3_medium.png" id="4_vobm8"]
[ext_resource type="Texture2D" uid="uid://dykbw1bykwex0" path="res://assets/ui/base_button_3_medium_hover.png" id="5_8xmfh"]

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_2yjm8")

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_52a8q")

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/TextureRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect/CenterContainer"]
layout_mode = 2

[node name="MainLabel" type="Label" parent="CenterContainer/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.839216, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 21
text = "PAUSED"
horizontal_alignment = 1

[node name="Resume" type="TextureButton" parent="CenterContainer/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_vobm8")
texture_hover = ExtResource("5_8xmfh")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CenterContainer/TextureRect/CenterContainer/VBoxContainer/Resume"]
layout_mode = 0
offset_left = -3.0
offset_top = 4.0
offset_right = 69.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.792157, 0.52549, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 9
text = "RESUME GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" type="TextureButton" parent="CenterContainer/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_vobm8")
texture_hover = ExtResource("5_8xmfh")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CenterContainer/TextureRect/CenterContainer/VBoxContainer/Home"]
layout_mode = 0
offset_left = -3.0
offset_top = 3.0
offset_right = 69.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.552941, 0.411765, 0.478431, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 9
text = "BACK TO MAIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmCenterContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0

[node name="TextureRect" type="TextureRect" parent="ConfirmCenterContainer"]
layout_mode = 2
texture = ExtResource("1_52a8q")

[node name="CenterContainer" type="CenterContainer" parent="ConfirmCenterContainer/TextureRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmCenterContainer/TextureRect/CenterContainer"]
layout_mode = 2

[node name="MainLabel" type="Label" parent="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.839216, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 21
text = "END GAME?"
horizontal_alignment = 1

[node name="Yes" type="TextureButton" parent="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_vobm8")
texture_hover = ExtResource("5_8xmfh")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer/Yes"]
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 82.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.792157, 0.52549, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 9
text = "confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="No" type="TextureButton" parent="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_vobm8")
texture_hover = ExtResource("5_8xmfh")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer/No"]
layout_mode = 0
offset_left = 10.0
offset_top = 3.0
offset_right = 82.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.552941, 0.411765, 0.478431, 1)
theme_override_fonts/font = ExtResource("2_qkxwq")
theme_override_font_sizes/font_size = 9
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/TextureRect/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/TextureRect/CenterContainer/VBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="ConfirmCenterContainer/TextureRect/CenterContainer/VBoxContainer/No" to="." method="_on_no_pressed"]
